# Game_of_life-graphique

./: .gitignore  CMakeLists.txt  README.md  game.hpp
header/: Cell.hpp  Game.hpp  GameBoard.hpp  GameSetting.hpp  Grid.hpp  Menu.hpp  Position.hpp  cell.hpp  constants.hpp  menu.hpp  position.hpp
image_fonts/: main_menu_title.png:Zone.Identifier
src/: Cell.cpp  Game.cpp  GameBoard.cpp  GameSetting.cpp  Grid.cpp  Menu.cpp  Position.cpp  main  main.cpp  menu.cpp
